# FastHud

./: README.md  io.github.fasthud.json  io.github.fastoslinux.fasthud.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-io.github.fasthud.json/: init
.flatpak-builder/cache/refs/heads/x86_64-io.github.fastoslinux.fasthud.json/: init
.flatpak-builder/checksums/: x86_64-io.github.fasthud.json  x86_64-io.github.fastoslinux.fasthud.json
.flatpak-builder/git/https_github.com_fastoslinux_FastHud.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_fastoslinux_FastHud.git/objects/pack/: pack-e69f8ffd6dd605b170d751028781e1c1f26d7644.idx  pack-e69f8ffd6dd605b170d751028781e1c1f26d7644.pack  pack-e69f8ffd6dd605b170d751028781e1c1f26d7644.rev
data/: io.github.fasthud.appdata.xml.in  io.github.fasthud.desktop.in  io.github.fasthud.gschema.xml  io.github.fastoslinux.fasthud.appdata.xml.in  io.github.fastoslinux.fasthud.desktop.in  io.github.fastoslinux.fasthud.gschema.xml  io.github.fastoslinux.fasthud.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: fasthudgtk4devel.gresource.xml  fasthudgtk4devel.in  main.py  meson.build  window.py  window.ui
